# nvidia-couter

./: CMakeLists.txt  README.md  build-aarch64.sh  build-linux.sh  build-windows.sh  main.cpp
build-aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  nvidia-couter-cmake
cmake/: FindAlgocc.cmake  algocc.cmake
include/: algocc.h
output/: NvidiaCouter  testClient
test/: test_client.cpp
utils/: CMakeLists.txt
vending_client/: CMakeLists.txt  ZmqClient.cpp  ZmqClient.h
vending_service/: CMakeLists.txt  ZmqServiceCall.cpp  ZmqServiceCall.h  ZmqServiceDemo copy.h  ZmqServiceDemo.cpp  ZmqServiceDemo.h
